# flashborn

./: .gitignore  CLAUDE.md  PLAN.md  README.md  package-lock.json  package.json
docs/: 3D-ASSET-RECIPE.md
web/: ARCHITECTURE.md  middleware.ts  next.config.ts  package.json
web/app/: ConvexClientProvider.tsx  globals.css  layout.tsx  page.tsx
web/app/api/forge/: _worker.ts
web/app/c/[slug]/: CardDetail.tsx  page.tsx
web/app/card/[publicId]/: page.tsx
web/app/collection/: page.tsx
web/app/concepts/: _data.ts  page.tsx
web/app/concepts/chrome-noir/: page.tsx
web/app/concepts/foundry/: page.tsx
web/app/explore/: page.tsx
web/app/forge/: page.tsx
web/app/packs/: page.tsx
web/app/signin/: page.tsx
web/components/: Button.tsx  CardFilterBar.tsx  CardFrame.tsx  FactionBadge.tsx  ForgeGate.tsx  ForgeImageModal.tsx  ForgePipeline.tsx  ForgeStageBadge.tsx  KindBadge.tsx  ModelViewer.tsx  PackReveal.tsx  PackSummary.tsx  RarityBadge.tsx  RoleBadge.tsx  ShareButton.tsx  StatPip.tsx  TopNav.tsx  useEnsureProfile.ts
web/convex/: auth.ts  cards.ts  collection.ts  dev.ts  files.ts  generation.ts  lib.ts  packs.ts  projects.ts  schema.ts  users.ts
web/lib/: character.ts  prompt.ts  theme.ts
web/scripts/: archetypes.ts  dump-obj3d-urls.ts  extra-cards.ts  generate-all.ts  generate-concepts.ts  generate-logos.ts  item-3d.ts  legendary-3d.ts  publish-starter.ts
workers/3d/: HACKATHON.md  README.md  hunyuan3d_worker.py  pyproject.toml
workers/image/: .gitignore  FLASH_DEPLOY_REPRO.md  README.md  hidream_worker.py  pyproject.toml
(+7 files in other folders)
