[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flashborn-image"
version = "0.1.0"
description = "Flashborn image worker (HiDream-O1) — Runpod Flash Serverless Application"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = ["runpod-flash"]
